# gcovr

./: .codacy.yml  .dockerignore  .editorconfig  .gitattributes  .gitbugtraq  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint.yml  AUTHORS.txt  CHANGELOG.rst  CHANGELOG.txt  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  cspell.json  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: CI.yml  build.yml  deploy.yml  gcovr-ci-job.yml  pr_cleanup.yml  test.yml  upload_coverage.yml
admin/: 0001-Added-ability-to-set-the-viewport-and-associated-opt.patch  Dockerfile.qa  add_copyright.py  bump_version.py  docker_entrypoint.sh  jenkins_gcovr  release_checklist  release_checklist.sh
doc/: .gitignore  Makefile  README.txt  guide.rst  guide.txt  include_anchors.py  requirements.txt
doc/examples/: CMakeLists.txt  example.cpp  example.sh  example1.sh  example1.txt  example2.sh  example2.txt  example3.sh  example3.txt  example4.sh  example5.sh  example_branches.sh  example_branches.txt  example_clover.sh  example_clover.xml  example_cmake.sh  example_cmake.txt  example_cobertura.sh  example_cobertura.xml  example_csv.csv  example_csv.sh  example_html.details.css  example_html.details.example.cpp.9597a7a3397b8e3a48116e2a3afb4154.html  example_html.details.functions.html  example_html.details.html  example_html.html  example_html.sh  example_html_details.example.cpp.9597a7a3397b8e3a48116e2a3afb4154.html  example_html_details.html  example_html_details.sh  example_jacoco.sh  example_jacoco.xml  example_json.json  example_json.sh  example_json_summary.json  example_json_summary.sh  example_timestamps.sh  example_txt.sh  example_txt.txt  example_xml.sh  (+2 more)
doc/examples/example1/: example1.cpp
doc/examples/example2/: example2.cpp
doc/source/: changelog.rst  conf.py  cookbook.rst  faq.rst  getting-started.rst  guide-timestamps.rst  guide.rst  index.rst  installation.rst  known_bugs.rst  license.rst  manpage.rst  quickstart.rst
extras/html_styles/: doxygen_awesome_dark_style.css
gcovr/: __init__.py  __main__.py  args.py  cobertura_xml_generator.py  configuration.py  coverage.py  coveralls_generator.py  csv_generator.py  data.py  decision_analysis.py  driver.py  exclusions.py  gcov.py  gcov_parser.py  html_generator.py  html_report.py  json_generator.py  merging.py  options.py  path.py  sonarqube_generator.py  summary_generator.py  text_report.py  timestamps.py  txt_generator.py  utils.py  version.py  workers.py  xml_report.py
gcovr/exclusions/: __init__.py  markers.py  noncode.py  utils.py
gcovr/formats/: __init__.py  base.py
gcovr/generator/: cobertura_xml.py  coveralls.py  csv.py  html.py  json.py  sonarqube.py  summary.py  txt.py
gcovr/gitrepo/: __init__.py  gitrepo.py  gitrepo_test.py
gcovr/prints/: __init__.py  html.py  text.py  xml.py
gcovr/pyinstaller/: main.py
gcovr/reader/: __init__.py  base.py  json.py
gcovr/templates/: base.html  directory_page.html  footer.html  functions_page.html  index.html  root_page.html  source.html  source_page.html  style.css  style.details.css  style.meter.css  style.summary.css
gcovr/tests/: .gitattributes  .gitignore  conftest.py  test_args.py  test_config.py  test_coverage.py  test_gcov_parser.py  test_gcovr.py  test_html_generator.py
gcovr/tests/cmake_oos/: CMakeLists.txt  Makefile  Toolchain.cmake  build.sh
gcovr/tests/cmake_oos/reference/: coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.main.cpp.html  coverage.txt  coverage.xml  sonarqube.xml
gcovr/tests/cmake_oos/reference/clang-10/: cobertura.xml  coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml  coveralls.json
gcovr/tests/cmake_oos/reference/clang-13/: coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml
gcovr/tests/cmake_oos/reference/gcc-5/: cobertura.xml  coverage.functions.html  coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml  coveralls.json
gcovr/tests/cmake_oos/reference/gcc-6/: coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml  coveralls.json  sonarqube.xml
gcovr/tests/cmake_oos/reference/gcc-8/: cobertura.xml  coverage.functions.html  coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml  sonarqube.xml
gcovr/tests/cmake_oos/reference/gcc-9/: coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.xml  coveralls.json
gcovr/tests/coexisting_object_directories/: CMakeLists.txt  Makefile  candidate_tests.bash
gcovr/tests/coexisting_object_directories/reference/gcc-12/: coverage.b.txt  coverage.c.txt
gcovr/writer/: __init__.py  base.py  cobertura.py  coveralls.py  csv.py  html.py  json.py  sonarqube.py  summary.py  txt.py  utils.py
pyutilib/: __init__.py
pyutilib/gcovr/: __init__.py
scripts/: gcovr  pyinstaller_entrypoint.py
src/gcovr/: __init__.py  __main__.py  configuration.py  coverage.py  decision_analysis.py  exceptions.py  filter.py  logging.py  merging.py  options.py  timestamps.py  utils.py
tests/: .gitattributes  .gitignore  Makefile  clover.xsd  common.mk  conftest.py  create_gz.py  sonar-generic-coverage.xsd  test_args.py  test_config.py  test_coverage.py  test_examples.py  test_gcov_parser.py  test_gcovr.py  test_html_generator.py
tests/add-tracefile/: test_add_tracefile.py
tests/add_coverages/: Makefile  bar.cpp
tests/bad++char/: Makefile  main.cpp
tests/bazel/: BUILD  Makefile  lib.h  test_bazel.py
tests/calls/: Makefile  test_calls.py
tests/cmake/: test_cmake.py
tests/cmake/source/gtest/: CMakeLists.txt
tests/cmake/source/gtest/source/: code.cpp
tests/cmake_gtest/: Makefile
tests/cmake_oos/: Makefile  README  build.sh
tests/cmake_oos_ninja/: Makefile
tests/coexisting-object-directories/: test_coexisting_object_directories.py
tests/compare/: test_compare.py
tests/csv/: Makefile  (+1 more)
(+12204 files in other folders)
