# pyproject.toml is a new configuration file defined in PEP 518.
# It is design to store build system requirements, but it can also store any
# tool configuration for your Python project, possibly replacing the need for
# setup.cfg or other tool-specific files.
# https://github.com/carlosperate/awesome-pyproject

[build-system]
requires = ["setuptools", "wheel"]

[tool.flake8]
max-line-length = 120
ignore = 'E501,W503'
exclude = 'doc'

[tool.black]
line-length = 120
include = 'gcovr\/.*(\.py|GET|POST)'

[tool.coverage.report]
exclude_lines = [
    "[#]\\s*pragma: no cover",
    "^\\s*raise AssertionError\b",
    "^\\s*raise NotImplementedError\b",
    "^\\s*assert False\b",
]
