[metadata]
description = Generate C/C++ code coverage reports with gcov
license = BSD
license_files = LICENSE.txt

url = https://gcovr.com
project_urls =
    Github        = https://github.com/gcovr/gcovr
    Issue Tracker = https://github.com/gcovr/gcovr/issues

maintainer = Lukas Atkinson
maintainer_email = opensource@lukasatkinson.de

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

keywords = gcc, gcov, lcov, coverage, Jenkins, Cobertura

[bdist_wheel]
universal=1
